compress output
