# dlframework.swagger.json
@@ -932,6 +932,9 @@
           "type": "string",
           "title": "An id used to identify the output feature: maps to input_id for output"
         },
+        "data_type": {
+          "type": "string"
+        },
         "char_list": {
           "type": "array",
           "items": {
@@ -957,6 +960,11 @@
         "channels": {
           "type": "integer",
           "format": "int32"
+        },
+        "compressed_data": {
+          "type": "string",
+          "format": "byte",
+          "title": "compressed data is only used by the webserver and javascript codes"
         }
       }
     },
